	  standalone/wxwin/packagesdlg.cpp,
	  standalone/wxwin/packagesdlg.h,
	  standalone/wxwin/settingsdlg.cpp,
	  standalone/wxwin/templatesdlg.cpp: Eliminate deprecated wxWidgets
	calls. [ Bugzilla 1001947 ]
	* standalone/wxwin/appsettings.cpp,
	  standalone/wxwin/conflictsdlg.cpp: Silence initialization order
	compiler warnings with recent GCC. [ Bugzilla 1001948 ]
	* standalone/wxwin/mainwin.cpp, standalone/wxwin/configtool.cpp:
	Update copyright strings.

2013-03-15  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/admindlg.cpp: Pass POSIX-style paths to
	ecosadmin.tcl for recent versions of Cygwin. [ Bugzilla 1001798 ]
	* standalone/wxwin/mainwin.cpp, standalone/wxwin/configtool.cpp:
	Update copyright strings.

2012-06-22  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/makefile.gnu: Update linker flags for recent
	versions of Fedora with modified DSO-linking semantics. Issue
	reported by David Fernandez. [ Bugzilla 1001613 ]

2012-04-23  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/makefile.gnu: Update build flags for recent
	versions of Cygwin.
	* standalone/wxwin/configtool.cpp, standalone/wxwin/mainwin.cpp:
	Update copyright strings.

2011-02-07  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/configitem.cpp: Escape newline chars in CDL
	values for display and in-cell editing. [ Bugzilla 1001144 ]
	* standalone/wxwin/mainwin.cpp, standalone/wxwin/configtool.cpp:
	Update copyright strings.

2010-09-10  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/configtooldoc.cpp: Allow import/export of
	eCos minimal configuration files with non-standard file suffixes.
	Based on patch from Ross Younger. [ Bugzilla 85580 ]

2010-02-17  John Dallaway  <john@dallaway.org.uk>

	* standalone/common/ecosconfig.cxx: Fix compilation on recent
	Cygwin hosts using NOMINMAX macro.

2009-11-17  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/packagesdlg.cpp: Fix the selection of a new